Fix contrast of placeholder in search field

--- a/VocaDbWeb/wwwroot/Content/Styles/base.less
+++ b/VocaDbWeb/wwwroot/Content/Styles/base.less
@@ -346,6 +346,27 @@ body .container-fluid {
 }
 
 
+#globalSearchTerm::-webkit-input-placeholder {
+	color: whitesmoke;
+}
+
+#globalSearchTerm::-moz-placeholder {
+	color: whitesmoke;
+	opacity: 1;
+}
+
+#globalSearchTerm:-ms-input-placeholder {
+	color: whitesmoke;
+}
+
+#globalSearchTerm::-ms-input-placeholder {
+	color: whitesmoke;
+}
+
+#globalSearchTerm::placeholder {
+	color: whitesmoke;
+}
+
 // Workarounds
 // Razor sometimes adds extra space which seems to be impossible to fix
 .razor-whitespace-fix {
